Translate in french 0019

--- a/src/routes/qwikcity/advanced/speculative-module-fetching/index.mdx
+++ b/src/routes/qwikcity/advanced/speculative-module-fetching/index.mdx
@@ -1,113 +1,113 @@
 ---
-title: Qwik City Speculative Module Fetching
+title: Qwik City Récupération spéculative de modules
 contributors:
   - ulic75
   - mhevery
   - adamdbradley
 ---
 
-# Speculative Module Fetching
+# Récupération spéculative de modules
 
-Qwik is able to load page and become interactive extremely fast due to its ability to startup _without_ JavaScript. In addition to this, Speculative Module Fetching is a powerful feature that allows Qwik to pre-populate the browser's cache in a background thread.
+Qwik est capable de charger une page et de devenir interactif extrêmement rapidement grâce à sa capacité de démarrer _sans_ JavaScript. En plus de cela, la récupération spéculative de modules est une fonctionnalité puissante qui permet à Qwik de pré-remplir le cache du navigateur en arrière plan.
 
-The goal of Qwik is not to pre-populate the cache with the entire application, but to have already cached what's possible _at that time_. When the Qwik optimizer breaks apart the application, it's able to understand possible user interactions. And from this, it's just as important that it's able to understand what's not possible from user interaction, and to not bother loading those bundles.
+Le but de Qwik n'est pas de pré-remplir le cache avec toute l'application, mais d'avoir déjà mis en cache ce qui est possible _à ce moment là_. Quand l'Optimiseur de Qwik décompose l'application, il est capable de comprendre les interactions possibles de l'utilisateur. Et à partir de cela, il est tout aussi important qu'il soit capable de comprendre les interactions de l'utilisateur qui ne sont pas possibles, et de ne pas s'embêter à charger ces bundles.
 
-- [Pre-populating the Cache with a Service Worker](#pre-populating-the-cache-with-a-service-worker)
-- [Caching Request and Response Pairs](#caching-request-and-response-pairs)
-- [Parallelizing Network Requests](#parallelizing-network-requests)
+- [Pré-chargement du cache avec un service worker](#pré-chargement-du-cache-avec-un-service-worker)
+- [Mise en cache des paires de requêtes et de réponses](#mise-en-cache-des-paires-de-requêtes-et-de-réponses)
+- [Parallélisation des requêtes réseau](#parallélisation-des-requêtes-réseau)
 
-### Pre-populating the Cache Per Page
+### Pré-chargement du cache par page
 
-Each page load will pre-populate the cache with bundles that _could_ be executed by the user, at that moment, on the page. For example, let's say that the page has a click listener on a button. When the page loads, the very first thing the service worker does is ensure the bundle for that click listener is already waiting in the [cache](#cache-api). When the user clicks the button, and Qwik makes a request to the event listener's bundle, the goal is that the bundle is already sitting in the [browser's cache](https://developer.mozilla.org/en-US/docs/Web/API/Cache) ready to execute.
+Chaque chargement de page pré-remplit le cache avec des bundles qui _pourraient_ être exécutés par l'utilisateur, à ce moment-là, sur la page. Par exemple, disons que la page a un écouteur de clic sur un bouton. Lorsque la page se charge, la toute première chose que fait le service worker est de s'assurer que le bundle pour cet écouteur de clic est déjà en attente dans le [cache](#api-du-cache). Quand l'utilisateur clique sur le bouton, et que Qwik fait une requête au bundle de l'écouteur d'évènement, le but est que le bundle soit déjà dans le [cache du navigateur](https://developer.mozilla.org/fr/docs/Web/API/Cache) prêt à être exécuté.
 
-### Pre-populating the Per Interaction
+### Pré-ccccc par interaction
 
-You can think of the page load as the first user interaction, which pre-populates the cache with what the next user interaction _could_ be. When a follow-up interaction happens, such as opening a modal or menu, then Qwik will again emit another event with additional bundles that could be used since the last interaction happened. Pre-populating the cache not only happens on page load, but continuously as users interact with the application.
+Vous pouvez voir le chargement de la page comme la première interaction de l'utilisateur, qui pré-remplit le cache avec ce que la prochaine interaction de l'utilisateur _pourrait_ être. Quand une interaction de suivi se produit, comme l'ouverture d'une modale ou d'un menu, alors Qwik émettra à nouveau un autre événement avec des bundles supplémentaires qui pourraient être utilisés depuis la dernière interaction. Le pré-remplissage du cache ne se fait pas seulement au chargement de la page, mais continuellement lorsque les utilisateurs interagissent avec l'application.
 
-### Pre-populate Cache Event
+### Pré-chargement de l'événement du cache
 
-The recommended strategy is to use a [service worker](#pre-populating-the-cache-with-a-service-worker) to populate the [browser's cache](https://developer.mozilla.org/en-US/docs/Web/API/Cache). The Qwik framework itself should use the [prefetchEvent](../../../docs/advanced/prefetching/index.mdx#prefetching-implementation) implementation, which is already the default.
+La stratégie recommandée est d'utiliser un [service worker](#pré-chargement-du-cache-avec-un-service-worker) pour remplir le [cache du navigateur](https://developer.mozilla.org/fr/docs/Web/API/Cache). Le framework Qwik lui-même devrait utiliser l'implémentation [prefetchEvent](../../../docs/advanced/prefetching/index.mdx#implémentation-de-la-prélecture), qui est déjà par défaut.
 
-## Pre-populating the Cache with a Service Worker
+## Pré-chargement du cache avec un service worker
 
-Traditionally, a service worker is used to cache most, or all, of the bundles that application uses. [Service workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers) are commonly seen only as a way to make an application work offline.
+Traditionnellement, un service worker est utilisé pour mettre en cache la plupart, voire la totalité, des bundles utilisés par l'application. Les [services workers](https://developer.mozilla.org/fr/docs/Web/API/Service_Worker_API/Using_Service_Workers) sont généralement considérés comme un moyen de faire fonctionner une application hors ligne.
 
-Qwik City, however, uses service workers quite differently to provide a powerful caching strategy. Instead, the goal is not to download the entire application, but rather to use the service worker to dynamically pre-populate the cache with what's _possible_ to execute. By _not_ downloading the entire application, this free's up resources to only request the small parts of the app a user _could_ use for what the user has on their screen at that time.
+Qwik City, cependant, utilise les services workers de manière très différente pour fournir une puissante stratégie de mise en cache. L'objectif n'est pas de charger l'intégralité de l'application, mais plutôt d'utiliser le service worker pour pré-remplir dynamiquement le cache avec ce qu'il est _possible_ d'exécuter. En _ne chargeant pas_ l'intégralité de l'application, on libère des ressources pour ne demander que les petites parties de l'application qu'un utilisateur _pourrait_ utiliser en fonction de ce qu'il a à l'écran à ce moment-là.
 
-Additionally, the service worker will automatically add listeners for these events emitted from Qwik.
+De plus, le service worker ajoutera automatiquement des écouteurs pour ces événements émis par Qwik.
 
-### Background Task
+### Tâche de fond
 
-An advantage of using a service worker is that it's also an extension of a [worker](https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API), which runs in a background thread.
+Un avantage de l'utilisation d'un service worker est qu'il s'agit également d'une extension d'un [worker](https://developer.mozilla.org/fr/docs/Web/API/Web_Workers_API), qui s'exécute dans un thread d'arrière-plan.
 
-> Web Workers makes it possible to run a script operation in a background thread separate from the main execution thread of a web application. The advantage of this is that laborious processing can be performed in a separate thread, allowing the main (usually the UI) thread to run without being blocked/slowed down.
+> Les Web Workers permettent d'exécuter une opération de script dans un thread d'arrière-plan distinct du thread d'exécution principal d'une application web. L'avantage est que les traitements laborieux peuvent être exécutés dans un thread séparé, ce qui permet au thread principal (généralement l'interface utilisateur) de s'exécuter sans être bloqué ou ralenti.
 
-By pre-populating the cache from within a service worker (which is a worker), we're able to essentially run the code in a background task, in order to not interfere with the main UI thread. By not interfering with the main UI we're able to help improve the performance of the Qwik application for users.
+En pré-remplissant le cache à partir d'un service worker (qui est un worker), nous sommes en mesure d'exécuter le code dans une tâche d'arrière-plan, afin de ne pas interférer avec le thread principal de l'interface utilisateur. En n'interférant pas avec l'interface principale, nous sommes en mesure d'améliorer les performances de l'application Qwik pour les utilisateurs.
 
-### Interactively Pre-populating the Cache
+### Pré-chargement interactif du cache
 
-Qwik itself should be configured to use the [prefetchEvent](../../../docs/advanced/prefetching/index.mdx#prefetching-implementation) implementation (which is also Qwik's default). When Qwik emits the event, the service worker registration actively forwards the event data to the installed and active service worker.
+Qwik lui-même doit être configuré pour utiliser l'implémentation [prefetchEvent](../../../docs/advanced/prefetching/index.mdx#implémentation-de-la-prélecture) (qui est également la valeur par défaut de Qwik). Lorsque Qwik émet l'événement, l'enregistrement du service worker transmet activement les données de l'événement au service worker installé et actif.
 
-The service worker (in a background thread) then fetches the modules and adds them to the browser's cache. The main thread simply has to emit data of what bundles it may need, while the service worker is only focused on ensuring it has the bundles cached. To do this the service worker pre-populates the browser's [Cache](https://developer.mozilla.org/en-US/docs/Web/API/Cache).
+Le service worker (dans un thread d'arrière-plan) récupère alors les modules et les ajoute au cache du navigateur. Le thread principal n'a plus qu'à émettre des données sur les bundles dont il pourrait avoir besoin, tandis que le service worker n'a plus qu'à s'assurer qu'il a bien les bundles en cache. Pour ce faire, le service worker remplit à l'avance le [Cache](https://developer.mozilla.org/fr/docs/Web/API/Cache) du navigateur.
 
-1. If the browser already has it cached? Great, do nothing!
-2. If the browser hasn't already cached this bundle, then let's kick off the fetch request.
+1. Si le navigateur l'a déjà mis en cache ? Parfait, ne fais rien !
+2. Si le navigateur n'a pas encore mis en cache ce bundle, lançons la requête de récupération.
 
-Read more about [Caching Request and Response Pairs](#caching-request-and-response-pairs).
+En savoir plus sur la [Mise en cache des paires de requêtes et de réponses](#mise-en-cache-des-paires-de-requêtes-et-de-réponses).
 
-Additionally, the service worker ensures that multiple requests for the same bundle do not happen at the same time. More about this in the [Parallelizing Network Requests](#parallelizing-network-requests) documentation.
+De plus, le service worker s'assure que plusieurs requêtes pour le même bundle ne se produisent pas en même temps. Pour en savoir plus, consultez la documentation [Parallélisation des requêtes réseau](#parallélisation-des-requêtes-réseau).
 
-## Caching Request and Response Pairs
+## Mise en cache des paires de requêtes et de réponses
 
-In many traditional frameworks, the preferred strategy is to use `<link>` with a `rel` attribute of `prefetch`, `preload` or `modulepreload`. However, there are [enough known issues](../../../docs/advanced/prefetching/index.mdx#link-rel) that Qwik has preferred to not make `link` the default prefetching strategy (though it still can be [configured](../../../docs/advanced/prefetching/index.mdx)).
+Dans de nombreux frameworks traditionnels, la stratégie préférée est d'utiliser `<link>` avec un attribut `rel` de `prefetch`, `preload` ou `modulepreload`. Cependant, il y a [suffisamment de problèmes connus](../../../docs/advanced/prefetching/index.mdx#lien-rel) pour que Qwik ait préféré ne pas faire de `link` la stratégie de prélecture par défaut (bien qu'elle puisse toujours être [configurée](../../../docs/advanced/prefetching/index.mdx)).
 
-Instead, Qwik prefers to use a newer approach that takes full advantage of the browser's [Cache API](https://developer.mozilla.org/en-US/docs/Web/API/Cache), which is also better supported compared to [modulepreload](../../../docs/advanced/prefetching/index.mdx#link-rel).
+Au lieu de cela, Qwik préfère utiliser une approche plus récente qui tire pleinement parti de l'[API de mise en cache](https://developer.mozilla.org/fr/docs/Web/API/Cache) du navigateur, qui est également mieux prise en charge que [modulepreload](../../../docs/advanced/prefetching/index.mdx#lien-rel).
 
-### Cache API
+### API du cache
 
-The [Cache API](https://developer.mozilla.org/en-US/docs/Web/API/Cache) is often associated with service workers, as a way to store request and response pairs in order for an application to work offline. In addition to enabling applications to work without connectivity, the same Cache API provides an extremely powerful caching mechanism available to Qwik.
+L'[API du cache](https://developer.mozilla.org/fr/docs/Web/API/Cache) est souvent associée aux services workers, en tant que moyen de stocker des paires de requêtes et de réponses afin de permettre à une application de fonctionner hors ligne. En plus de permettre aux applications de fonctionner sans connectivité, la même API du cache fournit un mécanisme de mise en cache extrêmement puissant disponible pour Qwik.
 
-Using the installed and activated [service worker](#pre-populating-the-cache-with-a-service-worker) to intercept requests, Qwik is able to handle specific requests for _known_ bundles. In contrast to the common way service workers are used, the default does not attempt to handle all requests, but rather, only known bundles generated by Qwik. The site's installed service worker can still be [customized by each site](#user-service-worker-code).
+En utilisant le [service worker](#pré-chargement-du-cache-avec-un-service-worker) installé et activé pour intercepter les requêtes, Qwik est capable de traiter des requêtes spécifiques pour des bundles _connus_. Contrairement à la façon dont les services workers sont généralement utilisés, le service par défaut n'essaie pas de traiter toutes les requêtes, mais seulement les bundles connus générés par Qwik. Le service worker installé sur le site peut toujours être [personnalisé par chaque site](#code-du-service-worker-de-lutilisateur).
 
-An advantage of Qwik's optimizer is it also generates a `q-manifest.json` file. The manifest provides a detailed module graph of not only how bundles are associated, but also which symbols are within each bundle. This same module graph data is provided to the service worker which allows for every network request for known bundles to be handled by the cache.
+Un avantage de l'Optimiseur de Qwik est qu'il génère également un fichier `q-manifest.json`. Le manifeste fournit un graphe de module détaillé non seulement sur la façon dont les bundles sont associés, mais aussi sur les symboles présents dans chaque bundle. Ces mêmes données de graphe de module sont fournies au service worker qui permet à chaque requête réseau pour des bundles connus d'être traitée par le cache.
 
-### Dynamic Imports and Caching
+### Importations et mise en cache dynamiques
 
-When Qwik requests a module it uses a dynamic `import()`. For example, let's say a user interaction happened, requiring Qwik to execute a dynamic import for `/build/q-abc.js`. The code to do so would look something like this:
+Quand Qwik requête un module, il utilise un `import()` dynamique. Par exemple, supposons qu'une interaction utilisateur se produise, demandant à Qwik d'exécuter un import dynamique pour `/build/q-abc.js`. Le code pour le faire ressemblerait à quelque chose comme ceci :
 
 ```ts
 const module = await import('/build/q-abc.js');
 ```
 
-What's important is here that Qwik itself has no knowledge of a prefetching or caching strategy. It's simply making a request for a URL. However, because we've installed a service worker, and the service worker is intercepting requests, it's able to inspect the URL and say, "look, this is a request for `/build/q-abc.js`! This is one of our bundles! Let's first check to see if we already have this in the cache before we do an actual network request."
+Ce qui est important ici, c'est que Qwik lui-même n'a aucune connaissance d'une stratégie de prélecture ou de mise en cache. Il fait simplement une demande d'URL. Cependant, parce que nous avons installé un service worker, et que ce service worker intercepte les requêtes, il est capable d'inspecter l'URL et de dire, « regardez, c'est une requête pour `/build/q-abc.js` ! C'est l'un de nos bundles ! Vérifions d'abord si nous l'avons déjà dans le cache avant de faire une requête réseau ».
 
-This is where the power of the service worker and cache API comes in! Qwik first pre-populates the cache for modules the user may soon request within another thread. And better yet, if it's already cached, then there's no need for the browser to do anything.
+C'est là que la puissance du service worker et de l'API du cache entre en jeu ! Qwik remplit d'abord le cache pour les modules que l'utilisateur pourrait bientôt requêter au sein d'un autre thread. Et mieux encore, si le module est déjà en cache, le navigateur n'a pas besoin de faire quoi que ce soit.
 
-Other benefits include [Parallelizing Network Requests](#parallelizing-network-requests).
+Les autres avantages sont la [Parallélisation des requêtes réseau](#parallélisation-des-requêtes-réseau).
 
-## Parallelizing Network Requests
+## Parallélisation des requêtes réseau
 
-In the [Caching Request and Response Pairs](#cache-api) docs we explained the powerful combination of the [Cache](https://developer.mozilla.org/en-US/docs/Web/API/Cache) and [Service Worker](https://developer.mozilla.org/en-US/docs/Web/API/ServiceWorker) APIs. However, we can take it even one step further by ensuring duplicate requests are not created for the same bundle, and we can prevent network waterfalls, all from within the background thread.
+Dans la documentation [Mise en cache des paires de requêtes et de réponses](#api-du-cache), nous avons expliqué la puissante combinaison des API du [Cache](https://developer.mozilla.org/fr/docs/Web/API/Cache) et du [Service Worker](https://developer.mozilla.org/fr/docs/Web/API/ServiceWorker). Cependant, nous pouvons aller encore plus loin en nous assurant que des requêtes en double ne soient pas créées pour le même bundle, et nous pouvons empêcher les cascades réseau, le tout à partir du thread d'arrière-plan.
 
-### Avoiding Duplicate Requests
+### Empêcher les requêtes en double
 
-For example, let's say an end-user currently has a slow 3G connection. When they first request the landing page, as fast as this slow network allows, the device downloads the HTML and renders the content (an area where Qwik really shines). On this slow connection, it'd be a shame if they'd have to also download a few more hundred kilobytes just to [make their app work and become interactive](https://www.builder.io/blog/hydration-is-pure-overhead).
+Par exemple, supposons qu'un utilisateur final dispose actuellement d'une connexion 3G lente. Lorsqu'il demande pour la première fois la page de destination, aussi rapidement que le permet ce réseau lent, l'appareil charge le code HTML et rend le contenu (un domaine dans lequel Qwik brille vraiment). Sur cette connexion lente, il serait dommage qu'il soit obligé de charger quelques centaines de kilobytes supplémentaires juste pour [faire fonctionner son application et la rendre interactive](https://www.builder.io/blog/hydration-is-pure-overhead).
 
-However, because the app was built with Qwik, the end-user doesn't need to download the entire application for it to become interactive. Instead, the end-user already downloaded the SSR rendered HTML app, and any interactive parts, such as an "Add to cart" button, can be prefetched immediately. Note that we're only prefetching the actual listener code, and _not_ the entire stack of the component tree render functions.
+Cependant, comme l'appli a été créée avec Qwik, l'utilisateur final n'a pas besoin de charger l'ensemble de l'appli pour qu'elle devienne interactive. Au lieu de cela, l'utilisateur final a déjà chargé l'application HTML rendue par le SSR, et toutes les parties interactives, telles qu'un bouton « Ajouter au panier », peuvent être préchargées immédiatement. Notez que nous ne récupérons que le code de l'écouteur, et _pas_ la pile entière des fonctions de rendu de l'arbre des composants.
 
-In this extremely common real-world example of a device with a slow connection, the device immediately starts to pre-populate the cache for the possible interactions that are visible by the end-user. However, due to their slow connection, even though we started to cache the modules as soon as possible in a [background thread](#background-task), the fetch request itself could still be in flight.
+Dans cet exemple extrêmement courant d'un appareil avec une connexion lente, l'appareil commence immédiatement à pré-remplir le cache pour les interactions possibles qui sont visibles par l'utilisateur final. Toutefois, en raison de la lenteur de la connexion, même si nous avons commencé à mettre les modules en cache dès que possible dans un [thread d'arrière-plan](#tâche-de-fond), la requête de recherche elle-même peut encore être en cours de traitement.
 
-For demo purposes, let's say the fetching for this bundle takes two seconds. However, after one second of viewing the page, the user clicks on the button. In a traditional framework, there's a good chance that absolutely nothing would be happening! If the framework hasn't finished downloading, the app hasn't hydrated, the app hasn't re-rendered, and the event listener hasn't been added to the button yet. Sadly, the user's interaction would just be lost on a framework using hydration.
+Pour les besoins de la démonstration, disons que la recherche de ce bundle prend deux secondes. Cependant, après une seconde d'affichage de la page, l'utilisateur clique sur le bouton. Dans un framework traditionnel, il y a de fortes chances qu'il ne se passe absolument rien ! Si le framework n'a pas fini de se charger, l'appli n'a pas été hydratée, l'appli n'a pas été re-rendue et l'écouteur d'événement n'a pas encore été ajouté au bouton. Malheureusement, l'interaction de l'utilisateur serait tout simplement perdue sur un framework utilisant l'hydratation.
 
-However, with Qwik's caching, if the user clicked the button, and we already started a request one second ago, and it has one second left until it's fully received, then the end-user only has to wait for one second. Remember, they're on a slow 3G connection for this demo. Luckily the user already received the full rendered landing page, so they're already looking at a completed page. Next, they're only pre-populating the cache with the bits of the app they could interact with, and their slow connection is dedicated to just those bundle(s). This is in contrast to their slow connection downloading all of the app, just to execute the one listener.
+Cependant, avec la mise en cache de Qwik, si l'utilisateur a cliqué sur le bouton, et que nous avons déjà lancé une requête il y a une seconde et qu'il reste une seconde avant qu'elle ne soit entièrement reçue, l'utilisateur final n'a plus qu'à attendre une seconde. N'oubliez pas qu'il dispose d'une connexion 3G lente pour cette démonstration. Heureusement, l'utilisateur a déjà reçu le rendu complet de la page de destination, de sorte qu'il voit déjà une page terminée. Ensuite, le cache n'est pré-rempli qu'avec les éléments de l'application avec lesquels l'utilisateur peut interagir, et la connexion lente est dédiée à ce(s) bundle(s). Cela contraste avec le fait que leur connexion lente charge l'ensemble de l'appli, juste pour exécuter un écouteur.
 
-Qwik is able to intercept requests for known bundles, and if a fetch in a background thread is already in flight, and then a user requests the same bundle, it'll ensure that the second request is able to re-use the initial one, which may already be done downloading. Trying to perform any of this with the [link](../../../docs/advanced/prefetching/index.mdx#link-rel) also shows why Qwik preferred to not make it the default, but instead use the caching API and intercepting requests with a service worker.
+sQwik est capable d'intercepter les requêtes pour des bundles connus, et si une récupération en arrière-plan est déjà en cours, et qu'un utilisateur demande ensuite le même bundle, il s'assurera que la seconde requête est capable de réutiliser la requête initiale, qui a peut-être déjà été chargée. En essayant d'effectuer tout cela avec le [link](../../../docs/advanced/prefetching/index.mdx#lien-rel), on comprend pourquoi Qwik a préféré ne pas en faire la valeur par défaut, mais plutôt utiliser l'API de mise en cache et intercepter les requêtes avec un service worker.
 
-### Reducing Network Waterfalls
+### Réduction des cascades réseaux
 
-A network waterfall is when numerous requests happen one after another, like steps downstairs, rather than in parallel. A waterfall of network requests will usually hurt performance because it increases the time until all modules are downloaded, rather than each module starting to download at the same time.
+Une cascade réseau se produit lorsque de nombreuses requêtes se succèdent, comme des marches d'escalier, plutôt qu'en parallèle. Une cascade réseau nuit généralement aux performances, car elle augmente le temps nécessaire au chargement de tous les modules, au lieu que chaque module commence à être chargé en même temps.
 
-Below is an example with three modules: A, B and C. Module A imports B, and B imports C. The HTML document is what starts the waterfall by first requesting Module A.
+Voici un exemple avec trois modules : A, B et C. Le module A importe le module B, et le module B importe le module C. Le document HTML est le point de départ de la cascade en demandant d'abord le module A.
 
 ```ts
 import './b.js';
@@ -127,15 +127,15 @@ console.log('Module C');
 <script type="module" src="./a.js"></script>
 ```
 
-In this example, when Module `A` is first requested, the browser has no idea that it should also start requesting Module `B` and `C`. It doesn't even know it needs to start requesting Module `B`, until AFTER Module `A` has finished downloading. It's a common problem in that the browser doesn't know ahead of time what it should start to request, until after each module has finished downloading.
+Dans cet exemple, lorsque le module `A` est demandé pour la première fois, le navigateur ne sait pas qu'il doit également demander les modules `B` et `C`. Il ne sait même pas qu'il doit commencer à demander le module `B` qu'APRÈS que le module `A` ait fini d'être chargé. Il s'agit d'un problème courant dans la mesure où le navigateur ne sait pas à l'avance ce qu'il doit commencer à demander, jusqu'à ce que chaque module ait fini d'être chargé.
 
-However, because our service worker contains a module graph generated from the manifest, we do know all of the modules which _will_ be requested next. So when either user interaction or a prefetch for a bundle happens, the browser initiates the request for all of the bundles that _will_ be requested. This allows us to drastically reduce the time it takes to request all bundles.
+Cependant, comme notre service worker contient un graphe de modules généré à partir du manifeste, nous connaissons tous les modules qui _seront_ demandés par la suite. Ainsi, lors d'une interaction avec l'utilisateur ou d'une récupération anticipée d'un bundle, le navigateur initie la requête pour tous les bundles qui _seront_ demandés. Cela nous permet de réduire considérablement le temps nécessaire pour demander tous les bundles.
 
-## User Service Worker Code
+## Code du service worker de l'utilisateur
 
-The default service worker that is installed by Qwik City can still be controlled entirely by the application. For example, the source file `src/routes/service-worker.ts` becomes `/service-worker.js`, which is the script requested by the browser. Notice how it's place within `src/routes` still follows the same directory based routing pattern.
+Le service worker par défaut qui est installé par Qwik City peut toujours être contrôlé entièrement par l'application. Par exemple, le fichier source `src/routes/service-worker.ts` devient `/service-worker.js`, qui est le script requêté par le navigateur. Remarquez que sa place dans `src/routes` suit toujours le même modèle de routage basé sur les répertoires.
 
-Below is an example of a default `src/routes/service-worker.ts` source file:
+Voici un exemple de fichier source `src/routes/service-worker.ts` par défaut :
 
 ```ts
 import { setupServiceWorker } from '@builder.io/qwik-city/service-worker';
@@ -147,12 +147,12 @@ addEventListener('install', () => self.skipWaiting());
 addEventListener('activate', () => self.clients.claim());
 ```
 
-The source code for `src/routes/service-worker.ts` can be modified by the developer however they'd like. This includes opting-in, or opting-out, of setting up Qwik City's service worker.
+Le code source de `src/routes/service-worker.ts` peut être modifié par le développeur comme il le souhaite. Cela inclut l'acceptation ou le refus de la mise en place du service worker de Qwik City.
 
-Notice that the `setupServiceWorker()` function is imported from `@builder.io/qwik-city/service-worker` and executed at the top of the source file. If, and where, this function is called can be modified by the developer. For example, the developer may want to handle the fetch requests first, in which case they'd add their own fetch listener above `setupServiceWorker()`. Or if they didn't want to use Qwik City's service worker at all, they would just have to remove `setupServiceWorker()` from the file.
+Notez que la fonction `setupServiceWorker()` est importée de `@builder.io/qwik-city/service-worker` et exécutée au début du fichier source. Le développeur peut modifier l'endroit et le moment où cette fonction est appelée. Par exemple, le développeur peut vouloir gérer les requêtes de récupération en premier, auquel cas il ajoutera son propre écouteur de récupération au-dessus de `setupServiceWorker()`. Ou s'il ne veut pas du tout utiliser le service worker de Qwik City, il lui suffit de supprimer `setupServiceWorker()` du fichier.
 
-Additionally, the default `src/routes/service-worker.ts` file comes with an [install](https://developer.mozilla.org/en-US/docs/Web/API/ServiceWorkerGlobalScope/install_event) and [activate](https://developer.mozilla.org/en-US/docs/Web/API/ServiceWorkerGlobalScope/activate_event) event listeners, each added at the bottom of the file. The callbacks provided are the recommended callbacks. However, the developer can modify these callbacks depending on their own app's requirements.
+De plus, le fichier par défaut `src/routes/service-worker.ts` est fourni avec un écouteur d'événement [install](https://developer.mozilla.org/en-US/docs/Web/API/ServiceWorkerGlobalScope/install_event) et [activate](https://developer.mozilla.org/en-US/docs/Web/API/ServiceWorkerGlobalScope/activate_event), chacun ajouté au bas du fichier. Les callbacks fournis sont les callbacks recommandés. Cependant, le développeur peut les modifier en fonction des besoins de son appli.
 
-Another important note is that Qwik City's request intercepting is _only_ for Qwik bundles, it does not attempt to handle any requests which are not a part of its build.
+Une autre remarque importante est que l'interception des requêtes de Qwik City est _uniquement_ pour les bundles Qwik, il ne tente pas de gérer les requêtes qui ne font pas partie de sa construction.
 
-So while Qwik City does provide a way to help prefetch and cache bundles, it does not take full control of the app's service worker. This still allows developers to add their service worker logic without conflicting with Qwik.
+Ainsi, bien que Qwik City fournisse un moyen d'aider à la prélecture et à la mise en cache des bundles, il ne prend pas le contrôle total du service worker de l'application. Cela permet aux développeurs d'ajouter leur logique de service worker sans entrer en conflit avec Qwik.
