--- a/src/routes/qwikcity/route-loader/index.mdx
+++ b/src/routes/qwikcity/route-loader/index.mdx
@@ -6,13 +6,13 @@ contributors:
 
 # `routeLoader$()`
 
-routeLoaders allow data to flow from the server to the Qwik Components. For this reason, Qwik routeLoaders should be always understood in the context of **loading data in the server that is later consumed by a Qwik Component**, if you want to create a RESTful endpoint, please check the [endpoints](/qwikcity/endpoints/index.mdx) guide instead.
+Les routeLoaders permettent aux données de circuler du serveur vers les composants Qwik. Pour cette raison, les routeLoaders de Qwik doivent toujours être inclus dans le contexte de **chargement de données sur le serveur qui sont ensuite consommées par un composant Qwik**, si vous voulez créer un endpoint RESTful, veuillez consulter le guide [endpoints](/qwikcity/endpoints/index.mdx) à la place.
 
-They behave like RPC server-side functions that can be invoked by Qwik Components during rendering.
+Ils se comportent comme des fonctions RPC côté serveur qui peuvent être invoquées par les composants Qwik pendant le rendu.
 
-## Declaring a loader
+## Déclaration d'un chargeur
 
-routeLoaders can only be declared inside the `src/routes` folder, in a `layout.tsx` or `index.tsx` file, and they MUST be exported.
+Les routeLoaders ne peuvent être déclarés que dans le dossier `src/routes`, dans un fichier `layout.tsx` ou `index.tsx`, et ils DOIVENT être exportés.
 
 ```tsx
 // src/routes/layout.tsx
@@ -28,11 +28,11 @@ export const getProductData = routeLoader$(() => {
 });
 ```
 
-> routeLoaders are not endpoints, it's an internal communication channel between the server and the Qwik Components. Also, routeLoaders must return a JSON serializable value.
+> Les routeLoaders ne sont pas des endpoints, il s'agit d'un canal de communication interne entre le serveur et les composants Qwik. De plus, les routeLoaders doivent retourner une valeur JSON sérialisable.
 
-## Using a routeLoader
+## Utilisation d'un routeLoader
 
-routeLoaders can be used by any component in the application, as long as the loader is declared in a `layout.tsx` or `index.tsx` file that is part of the existing route.
+Les routeLoaders peuvent être utilisés par n'importe quel composant de l'application, tant que le chargeur est déclaré dans un fichier `layout.tsx` ou `index.tsx` qui fait partie de la route existante.
 
 ```tsx
 // src/routes/index.tsx
@@ -46,23 +46,23 @@ export const useGetServerTime = routeLoader$(() => {
 });
 
 export default component$(() => {
-  // Retrieve a reactive signal of the loader data
+  // Récupérer un signal réactif des données du chargeur
   const signal = useGetServerTime(); // Signal<{time: number}>
   return (
     <div>
-      Server time: {signal.value.time}
+      Heure du serveur : {signal.value.time}
     </div>
   );
 });
 ```
 
-> The `useGetServerTime()` retrieves the loader data, but it does not execute the loader multiple times. routeLoaders execute eagerly at the beginning of the request in order to provide low latency. For this reason they are only allowed in the `src/routes` folder, in a `layout.tsx` or `index.tsx` file, and they MUST be exported.
+> Le `useGetServerTime()` récupère les données du loader, mais ne l'exécute pas plusieurs fois. Les routeLoaders s'exécutent par anticipation au début de la requête afin de fournir une faible latence. Pour cette raison, ils ne sont autorisés que dans le dossier `src/routes`, dans un fichier `layout.tsx` ou `index.tsx`, et ils DOIVENT être exportés.
 
-## Multiple routeLoaders
+## Plusieurs routeLoaders
 
-Multiple routeLoaders are allowed across the whole application, and they can be used in any Qwik Component. **You can even declare multiple routeLoaders in the same file**.
+Plusieurs routeLoaders sont autorisés dans l'ensemble de l'application et peuvent être utilisés dans n'importe quel composant Qwik. **Vous pouvez même déclarer plusieurs routeLoaders dans le même fichier**.
 
-**File: `src/routes/layout.tsx`**
+**Fichier : `src/routes/layout.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
@@ -86,22 +86,22 @@ export default component$(() => {
 });
 ```
 
-**File: `src/components/footer.tsx`**
+**Fichier : `src/components/footer.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
 
-// Import the loader from the layout
+// Importe le chargeur depuis la mise en page
 import { useGetServerTime } from '../routes/layout.tsx';
 
 export const Footer = component$(() => {
-  // Consume the loader data
+  // Consomme les données du chargeur
   const signal = useGetServerTime();
   return <footer>Server time: {signal.value.time}</footer>;
 });
 ```
 
-**File: `src/routes/admin/index.tsx`**
+**Fichier : `src/routes/admin/index.tsx`**
 
 ```tsx
 import { component$ } from '@builder.io/qwik';
@@ -126,20 +126,20 @@ export default component$(() => {
     <section>
       <h1>Admin</h1>
       {logged.value.logged ? (
-        <p>Welcome {user.value.user.name}</p>
+        <p>Bienvenue {user.value.user.name}</p>
       ) : (
-        <p>You are not logged in</p>
+        <p>Vous n'êtes pas connecté</p>
       )}
     </section>
   );
 });
 ```
 
-## routeLoader context
+## Contexte de routeLoader
 
-Just like request handlers such as `onRequest` and `onGet`, routeLoaders have access to the `RequestEvent` object which includes information about the current request.
+Tout comme les gestionnaires de requêtes tels que `onRequest` et `onGet`, les routeLoaders ont accès à l'objet `RequestEvent` qui contient des informations sur la requête en cours.
 
-This information comes in handly when the loader needs to conditionally return data based on the request, or it needs to override the response status, headers or body manually.
+Ces informations sont utiles lorsque le chargeur doit renvoyer des données de manière conditionnelle en fonction de la requête, ou lorsqu'il doit modifier manuellement le statut, les entêtes ou le corps de la réponse.
 
 ```tsx
 import { routeLoader$ } from '@builder.io/qwik-city';
@@ -157,8 +157,8 @@ export const getServerTime = routeLoader$((ev) => {
 });
 ```
 
-## When to use a routeLoader?
+## Quand utiliser un routeLoader ?
 
-A routeLoader should be used when you need to provide some server-side data to your Qwik Components. For example, if you need to fetch some data from a database or an API, you can use a routeLoader to do that.
+Un routeLoader doit être utilisé lorsque vous avez besoin de fournir des données côté serveur à vos composants Qwik. Par exemple, si vous avez besoin de récupérer des données d'une base de données ou d'une API, vous pouvez utiliser un routeLoader pour le faire.
 
-You should not use a routeLoader to create a REST API, for that you’d be better off using an [Endpoint](/qwikcity/endpoints/index.mdx), which allows you to have tight control over the response headers and body.
+Vous ne devriez pas utiliser un routeLoader pour créer une API REST, pour cela il vaut mieux utiliser un [Endpoint](/qwikcity/endpoints/index.mdx), qui vous permet d'avoir un contrôle précis sur les entêtes et le corps de la réponse.
